kustomize/api/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
  annotations:
    api.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: api
  rules:
  - host: dev-api.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 3000
